--- a/views/movies/index.jade
+++ b/views/movies/index.jade
@@ -9,7 +9,10 @@ block content
         div.col-md-4(style="word-wrap: break word; background-color: #eff2ea; padding-left:15px; border: 1px solid #000; width:"+movies[movie].Metascore /2 +"%")
             h2= movies[movie].Title
             p= movies[movie].Metascore +" " + " "
-                button(type="submit" value="1") STEM
+            form(method="POST" action='/movies/savevote')
+                button.btn.btn-primary(type="submit") STEM
+                input(type="hidden", name="title", value=movies[movie].Title)
+                input(type="hidden", name="firstname", value=users.firstName)
         br 
         img(src=movies[movie].Poster, alt="", srcset="")
         div
