almost voting done

--- a/views/movies/index.jade
+++ b/views/movies/index.jade
@@ -13,6 +13,7 @@ block content
                 button.btn.btn-primary(type="submit") STEM
                 input(type="hidden", name="title", value=movies[movie].Title)
                 input(type="hidden", name="firstname", value=users.firstName)
+                input(type="hidden", name="lastname", value=users.lastName)
         br 
         img(src=movies[movie].Poster, alt="", srcset="")
         div
