--- a/views/movies/index.jade
+++ b/views/movies/index.jade
@@ -15,7 +15,7 @@ block content
                 input(type="hidden", name="firstname", value=users.firstName)
                 input(type="hidden", name="lastname", value=users.lastName)
         br 
-        img(src=movies[movie].Poster, alt="", srcset="")
+        img(src=movies[movie].Poster, alt="", srcset="", style="width:10%;height:10%")
         div
             p=movies[movie].Plot
             p= movies[movie].Actors
